# strategybuilder

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  package.json  tsconfig.base.json  turbo.json
apps/api/: README.md  package.json  pyproject.toml
apps/api/aiosqlite/: __init__.py
apps/api/app/: config.py  devserver.py  main.py
apps/api/app/api/routers/: __init__.py  analytics.py  auth.py  education.py  health.py  strategy_versions.py  templates.py  workspaces.py
apps/api/app/api/schemas/: analytics.py  education.py  strategy_versions.py  templates.py
apps/api/app/auth/: dependencies.py  schemas.py
apps/api/app/data/: block_definitions.py  education_suite.py  template_library.py
apps/api/app/db/: base.py  schema.py  session.py
apps/api/app/models/: __init__.py  compliance_event.py  onboarding_event.py  strategy.py  user.py  workspace.py
apps/api/app/services/: __init__.py  analytics_service.py  audit_service.py  education_service.py  graph_validation_service.py  strategy_version_service.py  template_service.py  user_service.py  workspace_service.py
apps/api/tests/: test_analytics_router.py  test_health.py  test_onboarding_features.py  test_strategy_versions.py  test_workspace_bootstrap.py
apps/workers/: package.json  pyproject.toml
apps/workers/tests/: test_app.py
apps/workers/worker/: __init__.py  app.py  tasks.py
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/strategybuilder_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py
docs/: architecture.md  brief.md  front-end-spec.md  prd.md  prd_blockbuilders_final.md  project_brief_starter_bmad_ba.md
example/: first_prompt.md  second_prompt.md
frontend/: next.config.mjs  package.json  tsconfig.json
scripts/: dev-services.sh  test.sh
spec-kit/: blockbuilders-product-requirements.md  blockbuilders-software-specifications.md  blockbuilders-ux-design.md  (+8 more)
(+131 files in other folders)
